--- a/ShippingEasy/ShippingEasy.csproj
+++ b/ShippingEasy/ShippingEasy.csproj
@@ -41,7 +41,10 @@
   <ItemGroup>
     <Compile Include="Client.cs" />
     <Compile Include="Connection.cs" />
+    <Compile Include="CreateOrderResponse.cs" />
     <Compile Include="Order.cs" />
+    <Compile Include="OrderQuery.cs" />
+    <Compile Include="OrderQueryResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Signature.cs" />
   </ItemGroup>
