Move dev configuration to console appSettings

--- a/ShippingEasy.Console/ShippingEasy.Console.csproj
+++ b/ShippingEasy.Console/ShippingEasy.Console.csproj
@@ -52,6 +52,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
@@ -86,6 +87,9 @@
       <Project>{1a69f3a7-e03e-47a8-abbf-4810bc71d14d}</Project>
       <Name>ShippingEasy</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
