--- a/ShippingEasy/ShippingEasy.csproj
+++ b/ShippingEasy/ShippingEasy.csproj
@@ -48,6 +48,7 @@
     <Compile Include="OrderQuery.cs" />
     <Compile Include="OrderQueryResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResponseParser.cs" />
     <Compile Include="Signature.cs" />
   </ItemGroup>
   <ItemGroup>
