Map property names by conventions, instead of explicitly

--- a/ShippingEasy/ShippingEasy.csproj
+++ b/ShippingEasy/ShippingEasy.csproj
@@ -49,6 +49,7 @@
     <Compile Include="OrderQueryResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseParser.cs" />
+    <Compile Include="Serialization.cs" />
     <Compile Include="Signature.cs" />
   </ItemGroup>
   <ItemGroup>
