--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -63,6 +63,9 @@
     <Content Include="fixtures\create_order_fail_validation.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="fixtures\create_order_fail_expired.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
