--- a/ShippingEasy/ShippingEasy.csproj
+++ b/ShippingEasy/ShippingEasy.csproj
@@ -41,16 +41,16 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiResponse.cs" />
-    <Compile Include="CancelOrderResponse.cs" />
+    <Compile Include="Responses\ApiResponse.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Connection.cs" />
-    <Compile Include="CreateOrderResponse.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderQuery.cs" />
-    <Compile Include="OrderQueryResponse.cs" />
+    <Compile Include="Responses\OrderQueryResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseHandler.cs" />
+    <Compile Include="Responses\CancelOrderResponse.cs" />
+    <Compile Include="Responses\CreateOrderResponse.cs" />
     <Compile Include="Serialization.cs" />
     <Compile Include="Signature.cs" />
   </ItemGroup>
