Authenticator can validate signatures on callback requests

--- a/ShippingEasy/ShippingEasy.csproj
+++ b/ShippingEasy/ShippingEasy.csproj
@@ -41,6 +41,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Authenticator.cs" />
     <Compile Include="Responses\ApiResponse.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Connection.cs" />
