--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -39,6 +39,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiResponseTests.cs" />
     <Compile Include="AuthenticatorTests.cs" />
     <Compile Include="ClientTests.cs" />
     <Compile Include="ConnectionTests.cs" />
@@ -74,6 +75,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="fixtures\cancel_order_fail_unknown_order.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="fixtures\invalid_json_response.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="packages.config" />
