Added order shipment mappings and original order object. Added note and internal note fields.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -80,6 +80,9 @@
     <Content Include="fixtures\invalid_json_response.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="fixtures\get_orders_success_shipment.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
