--- a/ShippingEasy/ShippingEasy.csproj
+++ b/ShippingEasy/ShippingEasy.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Authenticator.cs" />
     <Compile Include="OrderResponse.cs" />
+    <Compile Include="OriginalOrder.cs" />
     <Compile Include="Responses\ApiResponse.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Connection.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Responses\CreateOrderResponse.cs" />
     <Compile Include="Responses\StoreQueryResponse.cs" />
     <Compile Include="Serialization.cs" />
+    <Compile Include="Shipment.cs" />
     <Compile Include="Signature.cs" />
     <Compile Include="Store.cs" />
   </ItemGroup>
