Fixed JSON Parsing Error
Fixed JSON integer 3194232401 is too large or small for an Int32. Path 'orders[9].shipments[0].cloned_from_shipment_id', line 1, position 47973.

--- a/ShippingEasy/ShippingEasy.nuspec
+++ b/ShippingEasy/ShippingEasy.nuspec
@@ -12,6 +12,6 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <summary>ShippingEasy API Client</summary>
-    <copyright>Copyright 2015</copyright>
+    <copyright>Copyright 2015-2020</copyright>
   </metadata>
 </package>
